src/test/ui/consts/const-match-pattern-arm.stderr
error[E0658]: `match` is not allowed in a `const`
  --> $DIR/const-match-pattern-arm.rs:3:17
   |
LL |   const x: bool = match Some(true) {
   |  _________________^
LL | |     Some(value) => true,
LL | |     _ => false
LL | | };
   | |_^
   |
   = note: see issue #49146 <https://github.com/rust-lang/rust/issues/49146> for more information
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable

error[E0658]: `match` is not allowed in a `const`
  --> $DIR/const-match-pattern-arm.rs:9:5
   |
LL | /     match Some(true) {
LL | |         Some(value) => true,
LL | |         _ => false
LL | |     }
   | |_____^
   |
   = note: see issue #49146 <https://github.com/rust-lang/rust/issues/49146> for more information
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
